deployment/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysite
  labels:
    function: webserver
spec:
  containers:
  - name: httpd
    image: ghcr.io/qbritton/cis-92:milestone-5.1
    resources:
      requests:
        memory: "128Mi"
        cpu: "250m"
      limits:
        memory: "1Gi"
        cpu: "1000m"
    ports:
    - containerPort: 80
    livenessProbe:
      httpGet:
        path: /polls/
        port: 8080
