deployment/postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  volumes:
  - name: db
    persistentVolumeClaim:
        claimName: db
  containers:
  - name: postgres
    image: docker.io/postgres:14.1
    volumeMounts:
    - name: db
      mountPath: /var/lib/postgresql
    ports:
    - containerPort: 5432
    resources:
      requests:
        memory: "256Mi"
        cpu: "500m"
      limits:
        memory: "1Gi"
        cpu: "1000m"
