deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysite-service
  annotations: {
    cloud.google.com/backend-config: '{"default": "health-check"}'
  }
spec:
  type: NodePort
  selector:
    function: webserver
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
